# trackio-tui

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  cli.rs  comparison.rs  main.rs
src/data/: comparison.rs  mod.rs  models.rs  storage.rs
src/ui/: chart.rs  help.rs  metric_selector.rs  mod.rs  theme.rs  widgets.rs
