[package]
name = "trackio-tui"
version = "0.1.0"
edition = "2025"
description = "A Rust-based Terminal User Interface for visualizing trackio experiments"
license = "MIT"
repository = "https://github.com/francescorubbo/trackio-tui"
keywords = ["tui", "terminal", "experiment-tracking", "machine-learning"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# SQLite access
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Directory paths
dirs = "5"

[[bin]]
name = "trackio-tui"
path = "src/main.rs"
